--- a/apollo/config.cfg
+++ b/apollo/config.cfg
@@ -1,7 +1,7 @@
 DEBUG = True
 SECRET_KEY = 'secret test'
 
-SQLALCHEMY_DATABASE_URI = 'mysql://root:123456@localhost/apollo'
+SQLALCHEMY_DATABASE_URI = 'mysql://root:passwd@10.37.63.8/apollo'
 SQLALCHEMY_ECHO = False
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
