--- a/apollo/config.cfg
+++ b/apollo/config.cfg
@@ -2,6 +2,7 @@ DEBUG = True
 SECRET_KEY = 'secret test'
 
 SQLALCHEMY_DATABASE_URI = 'mysql://root:passwd@10.37.63.8/apollo'
+SQLALCHEMY_POOL_SIZE = 2
 SQLALCHEMY_ECHO = False
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
